# proof-of-sql-verifier

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: audit.toml
.github/workflows/: CI-ci-remote.yml  CI-rustdoc.yml
scripts/: add_header_if_missing.sh
src/: client.rs  dory.rs  error.rs  errors.rs  inner_product.rs  lib.rs  proof.rs  pubs.rs  serde.rs  verification_key.rs  verify.rs  verify_generic.rs
tests/: integration.rs
