[package]
name = "proof-of-sql-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
indexmap = { version = "2.1", default-features = false }
proof-of-sql = { version = "0.27.0", default-features = false }
proof-of-sql-parser = { version = "0.27.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.10", default-features = false, features = ["alloc"] }

[dev-dependencies]
ark-std = { version = "0.4.0" }
proof-of-sql = { version = "0.27.0", default-features = false, features = ["test"] }
rstest = { version = "0.22.0" }

[features]
std = [
    "serde/std",
    "serde_cbor/std",
    "proof-of-sql/std",
]
