[package]
name = "proof-of-sql-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Verifier for SxT ProofOfSQL protocol"
authors = ["Horizen Labs <admin@horizenlabs.io>"]

[dependencies]
ahash = { version = "0.8.11", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
indexmap = { version = "2.1", default-features = false }
proof-of-sql = { version = "0.28.6", default-features = false }
proof-of-sql-parser = { version = "0.28.6", default-features = false }
rand = { version = "0.8.0", optional = true }
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.10", default-features = false, features = ["alloc"] }

[dev-dependencies]
ark-std = { version = "0.4.0" }
proof-of-sql = { version = "0.28.6", default-features = false, features = ["test"] }
rstest = { version = "0.22.0" }

[features]
std = [
    "serde/std",
    "serde_cbor/std",
    "proof-of-sql/std",
]
test = [
    "std",
    "proof-of-sql/test"
]
rand = ["dep:rand"]

[[bin]]
name = "generate-sample-proof"
required-features = ["rand", "test"]
